--- a/contact.css
+++ b/contact.css
@@ -13,6 +13,7 @@
     justify-content: space-around;
     padding: 30px;
     filter: drop-shadow(3px 1px 14px aqua);
+    border-radius: 10px;
 }
 
 #email{
@@ -42,6 +43,7 @@
 }
 
 .box:hover{
+    border-radius: 10px;
     margin: 3px;
     filter: drop-shadow(3px 1px 14px black);
 }
